added restaurant logo, banner and conditional rendering

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -752,20 +752,6 @@ video {
   text-shadow: 0 0 0 #212529;
 }
 
-.btn-check[disabled] + .btn {
-  pointer-events: none;
-  -webkit-filter: none;
-          filter: none;
-  opacity: 0.65;
-}
-
-.btn-check:disabled + .btn {
-  pointer-events: none;
-  -webkit-filter: none;
-          filter: none;
-  opacity: 0.65;
-}
-
 .form-floating > .form-control {
   height: calc(3.5rem + 2px);
   line-height: 1.25;
@@ -831,15 +817,6 @@ video {
 }
 
 .input-group > .form-select:focus {
-  z-index: 3;
-}
-
-.input-group .btn {
-  position: relative;
-  z-index: 2;
-}
-
-.input-group .btn:focus {
   z-index: 3;
 }
 
@@ -1117,41 +1094,7 @@ textarea.form-control.is-invalid {
   z-index: 3;
 }
 
-.btn-check:focus + .btn {
-  outline: 0;
-  box-shadow: none;
-}
-
-.btn:focus {
-  outline: 0;
-  box-shadow: none;
-}
-
-.btn-check:checked + .btn {
-  box-shadow: none;
-}
-
-.btn-check:active + .btn {
-  box-shadow: none;
-}
-
-.btn:active {
-  box-shadow: none;
-}
-
 .btn.active {
-  box-shadow: none;
-}
-
-.btn-check:checked + .btn:focus {
-  box-shadow: none;
-}
-
-.btn-check:active + .btn:focus {
-  box-shadow: none;
-}
-
-.btn:active:focus {
   box-shadow: none;
 }
 
@@ -4495,6 +4438,10 @@ textarea.form-control.is-invalid {
   margin-top: 2.5rem;
 }
 
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -4659,6 +4606,12 @@ textarea.form-control.is-invalid {
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -4671,22 +4624,12 @@ textarea.form-control.is-invalid {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .overflow-y-auto {
   overflow-y: auto;
 }
 
 .overflow-x-hidden {
   overflow-x: hidden;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 
 .rounded {
@@ -4699,6 +4642,10 @@ textarea.form-control.is-invalid {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-none {
@@ -4865,26 +4812,26 @@ textarea.form-control.is-invalid {
   line-height: 1.75rem;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-medium {
   font-weight: 500;
 }
 
-.font-normal {
-  font-weight: 400;
-}
-
 .font-semibold {
   font-weight: 600;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .uppercase {
