--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4566,6 +4566,14 @@ textarea.form-control.is-invalid {
   width: 1rem;
 }
 
+.w-72 {
+  width: 18rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
 .max-w-xs {
   max-width: 20rem;
 }
